pgadmin-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev-pgadmin
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin-deployment
  namespace: dev-pgadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      serviceAccount: eks-pgadmin-sa
      containers:
        - name: pgadmin
          image: dpage/pgadmin4
          resources:
            limits:
              cpu: "1"
              memory: "8096Mi"
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-service
  namespace: dev-pgadmin
spec:
  selector:
    app: pgadmin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin
  namespace: dev-pgadmin
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false" 
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header X-Script-Name /pgadmin4;
spec:
  ingressClassName: external-nginx
  rules:
    - host: "*.elb.us-east-2.amazonaws.com"
      http:
        paths:
          - pathType: ImplementationSpecific
            path: /pgadmin4
            backend:
              service:
                name: pgadmin-service
                port:
                  number: 80
